--- a/404.html
+++ b/404.html
@@ -20,27 +20,16 @@
                 <div id="menu">
                     <table border="1">
                         <tr>
-                            <a href="lesbian.html">
-                                <td>Lesbian</td>
-                            </a>
-                            <a href="gay.html">
-                                <td>Gay</td>
-                            </a>
+                            <td><a href="lesbian.html">Lesbian</a></td>
+                            <td><a href="gay.html">Gay</a></td>
                         </tr>
                         <tr>
-                            <a href="webcam.html">
-                                <td>Webcam</td>
-                            </a>
-                            <a href="milf.html">
-                                <td>MILF</td>
-                            </a>
+                            <td><a href="webcam.html">Webcam</a></td>
+                            <td><a href="milf.html">MILF</a></td>
                         </tr>
                         <tr>
-                            <a href="dating.html">
-                                <td>Dating</td>
-                            </a>
-                            <a href="bisexual.html">
-                                <td>Bisexual</td>
+                            <td><a href="dating.html">Dating</a></td>
+                            <td><a href="bisexual.html">Bisexual</a></td>
                             </a>
                         </tr>
                     </table>
