--- a/index.html
+++ b/index.html
@@ -16,40 +16,30 @@
         <ul id="nav-li">
             <li class="li"><a href="index.html">Logo</a></li>
             <li id="nav-li-2"><span>Categories</span> <img src="img/opener.png" alt="">
-                <div id="menu">
-                    <table border="1">
-                        <tr>
-                            <a href="lesbian.html">
-                                <td>Lesbian</td>
-                            </a>
-                            <a href="gay.html">
-                                <td>Gay</td>
-                            </a>
-                        </tr>
-                        <tr>
-                            <a href="webcam.html">
-                                <td>Webcam</td>
-                            </a>
-                            <a href="milf.html">
-                                <td>MILF</td>
-                            </a>
-                        </tr>
-                        <tr>
-                            <a href="dating.html">
-                                <td>Dating</td>
-                            </a>
-                            <a href="bisexual.html">
-                                <td>Bisexual</td>
-                            </a>
-                        </tr>
-                    </table>
-                </div>
             </li>
+            <div id="menu">
+                <table border="1">
+                    <tr>
+                        <td><a href="lesbian.html">Lesbian</a></td>
+                        <td><a href="gay.html">Gay</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="webcam.html">Webcam</a></td>
+                        <td><a href="milf.html">MILF</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="dating.html">Dating</a></td>
+                        <td><a href="bisexual.html">Bisexual</a></td>
+                        </a>
+                    </tr>
+                </table>
+            </div>
+
         </ul>
     </div>
     <div class="table">
-        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste officia repellat cum.</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit assumenda facilis voluptas esse deserunt distinctio eveniet, non illum quidem magnam corporis corrupti at perspiciatis soluta odio, porro incidunt ipsa id.</p>
+        <h1 id="h1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste officia repellat cum.</h1>
+        <p id="p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit assumenda facilis voluptas esse deserunt distinctio eveniet, non illum quidem magnam corporis corrupti at perspiciatis soluta odio, porro incidunt ipsa id.</p>
         <table class="table-table">
             <tbody>
                 <tr>
