user-scalable-everywhere

--- a/webcam.html
+++ b/webcam.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, standart-user-scalable=50">
+
 </head>
 
 <body>
