--- a/404.html
+++ b/404.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, standart-user-scalable=50">
 </head>
 
 <body>
